# RaylibFlappyBird

./: .gitignore  CMakeLists.txt
resources/gameConfig/: gameConfig.json  gameConfig.properties
resources/level/: testLevel.json
src/: main.cpp
src/camera/: NimbleCamera.cpp  NimbleCamera.h
src/config/: GameConfig.cpp  GameConfig.h
src/elements/: Player.cpp  Player.h
src/elements/obstacles/: Obstacle.cpp  Obstacle.h  ObstacleGenerator.cpp  ObstacleGenerator.h  ObstacleManager.cpp  ObstacleManager.h
src/game/: Game.cpp  Game.h  GameWindow.cpp  GameWindow.h
src/level/: Level.cpp  Level.h  LevelLoader.cpp  LevelLoader.h  LevelManager.h
src/logger/: Logger.cpp  Logger.h
src/sounds/: NimbleSound.cpp  NimbleSound.h
src/tests/: Test.cpp
src/texture/: NimbleTexture.cpp  NimbleTexture.h
